# SpaceEngine

./: BattleCruiser.dat.txt  Battlecruiser.cpp  Battlecruiser.hpp  CMakeLists.txt  DataReader.cpp  DataReader.hpp  InputManager.cpp  InputManager.hpp  InteractionManager.hpp  KeyboardManager.hpp  Object.cpp  Object.hpp  ObjectHandler.hpp  Ship.cpp  ShipClass.hpp  SpaceEngine.cbp  SpaceEngine.depend  SpaceEngine.layout  main.cpp
data/: LeTibo.conf
src/: Battlecruiser.hpp  DataReader.cpp  DataReader.hpp  DisplayManager.hpp  Equipement.cpp  Equipement.hpp  InputManager.cpp  InputManager.hpp  MouseManager.hpp  Object.cpp  Object.hpp  Ship.cpp  Ship.hpp  Turret.cpp  Turret.hpp  main.cpp
tmp/: DataReader.cpp  DataReader.hpp  InputManager.cpp  InputManager.hpp  main.cpp  testc  testp
